fix: version's chip vertical alignment in <readme>.

--- a/src/app/pages/readme/readme.component.scss
+++ b/src/app/pages/readme/readme.component.scss
@@ -4,7 +4,7 @@
 
   & mat-chip {
     margin-left: 24px;
-    margin-bottom: 7px;
+    margin-top: 18px;
   }
 }
 
